fix: (contacts z-index fixed)

--- a/css/blocks/_contacts.scss
+++ b/css/blocks/_contacts.scss
@@ -92,7 +92,7 @@
   &__list {
     @include list-reset();
     position: absolute;
-    z-index: 2;
+    z-index: 200;
     margin-top: -1px;
     padding: 0;
     width: 100%;
